--- a/default/app/config/databases.ini
+++ b/default/app/config/databases.ini
@@ -7,7 +7,7 @@
 [development]
 host = localhost
 username = root ; no es recomendable usar el usuario root
-password = notieneninguna
+password = notiene
 name = denunciaty ; nombre de la base de datos
 type = mysqli ;
 charset = utf8 ; este valor es necesario para abrir conexiones UTF-8
@@ -15,7 +15,7 @@ charset = utf8 ; este valor es necesario para abrir conexiones UTF-8
 [production]
 host = localhost
 username = root
-password = notieneninguna
+password = notiene
 name = denunciaty
 type = mysqli
 
