Apañando acceso a base de datos
Signed-off-by: niptim <s.moliner.reig@gmail.com>

--- a/api/app/config/databases.ini
+++ b/api/app/config/databases.ini
@@ -6,7 +6,7 @@
 
 [development]
 host = localhost
-username = root ; no es recomendable usar el usuario root
+username = myden8276 ; no es recomendable usar el usuario root
 password = notieneninguna
 name = denunciaty ; nombre de la base de datos
 type = mysqli ;
@@ -14,7 +14,7 @@ charset = utf8 ; este valor es necesario para abrir conexiones UTF-8
 
 [production]
 host = localhost
-username = root
+username = myden8276
 password = notieneninguna
 name = denunciaty
 type = mysqli
