empezando a cagarme en todo

--- a/api/app/config/databases.ini
+++ b/api/app/config/databases.ini
@@ -6,7 +6,7 @@
 
 [development]
 host = localhost
-username = root ; no es recomendable usar el usuario root
+username = myden8276 ; no es recomendable usar el usuario root
 password = notieneninguna
 name = denunciaty ; nombre de la base de datos
 type = mysqli ;
