--- a/default/app/config/databases.ini
+++ b/default/app/config/databases.ini
@@ -6,16 +6,16 @@
 
 [development]
 host = localhost
-username = root ; no es recomendable usar el usuario root
-password = notiene
+username = myden8276 ; no es recomendable usar el usuario root
+password = notieneninguna
 name = denunciaty ; nombre de la base de datos
-type = mysqli ;
+type = mysqli ; 
 charset = utf8 ; este valor es necesario para abrir conexiones UTF-8
 
 [production]
 host = localhost
-username = root
-password = notiene
+username = myden8276
+password = notieneninguna
 name = denunciaty
 type = mysqli
 
